<resources>
    <string name="app_name">About Me</string>
    <string name="my_name">Loo Jia Yi</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="profile_desc">
        Education: \n
        \n\tTadika XXX\n
        \n\tSJK(C) Khai Chee, Kuala Lumpur\n
        \n\tSMK Kepong Baru, Kuala Lumpur\n
        \n\tTAR UC, Kuala Lumpur\n
        \nWorking Experiences:\n
        \n\tTuition teacher\n
        \n\tSales promoter\n
        \n\tEvent crew\n
    </string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>
