<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_gravity="center"
        android:text="@string/my_name"
        app:fontFamily="@font/roboto"
        style="@style/my_text_style" />

    <EditText
        android:id="@+id/nickname_edit"
        android:hint="@string/what_is_your_nickname"
        android:layout_gravity="center"
        android:textAlignment="center"
        style="@style/name_style" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/done" />

    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/small_padding"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_pic"
        app:srcCompat="@drawable/my_pic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDesc"
                style="@style/my_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_desc" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>